* `sjp.int` now uses proper x-axis-tick-labels for `type = "eff"`, when predictor on x-axis is a factor with non-numeric factor-levels (or has label attributes).
* `sjp.glm` gets a `group.estimates` argument to group estimates in forest plots and colour them according to group assignment. Use arguments `show.legend` and `legendTitle` to modify group legend.

Bug fixes:
* Fixed bug in `sjp.int`, where automatic y-axis-scaling for binary outcomes cut off parts of confidence region in some cases.

Version 1.9.1
-----------------------------------------------------------------------------
Changes to functions:
* Improved text label positioning for plotting functions.
* Plotting functions now get an argument `y.offset` to specify an offset for text labels from geoms.
* `sjp.lm` and `sjt.lm` now support `gls` models fitted with `nlme::gls`.
* `sjp.int` now fits the y-axis to the required range for predicted probabilities for logistic regressions instead of always using a range from 0 to 1, even for smaller effects.
* `sjp.glmer` and `sjp.lmer` get a `axisLimits.y` argument to specify y-axis limits specifically for predicted probability or effect plots.
* `view_df` now supports showing missings and missing percentages.
* Harmonized column names of returned data frames to match `broom`s naming convention for `sjp.lm`, `sjp.glm`, `sjp.lmer`, `sjp.glmer`, `sjp.lmm`, `sjp.glmm`, `sjp.aov1` and `sjp.int`.
* Functions with harmonized data frames as return value now also gain the class attribute `sjPlot`, and all returned data frame values are named `data`.
* `sjp.scatter` gets a `useCount` argument to indicate overplotting by point size.
* `sjp.scatter` now also plots data points when using argument `pointLabels`, so exact position of labelled data points is visible. `geom_text_repel` is used to avoid overlapping of points and labels.
* `sjt.xtab` gets a `title` argument to print a table caption.

Bug fixes: